// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestOverviewContent > disables unvisited 1`] = `
<body>
  <div>
    <div
      class="overview"
    >
      <div
        class="tabs"
      >
        <div
          class="tabgroup"
        >
           
          <div
            class="scrollbox"
          >
            <ul
              role="tablist"
            >
              <li
                role="presentation"
              >
                <button
                  aria-current="true"
                  aria-selected="true"
                  role="tab"
                >
                   
                  all questions
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  bookmarked (1)
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  incomplete (19)
                   
                </button>
                 
              </li>
            </ul>
            <iframe
              aria-hidden="true"
              src="about:blank"
              style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
              tabindex="-1"
            />
          </div>
           
        </div>
      </div>
       
      <div>
        <div
          class="tabpanel"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 1
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 1. Completed."
                  class="step completed"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    1
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Question 2. Not completed."
                  class="step visited"
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    2
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-current="location"
                  aria-disabled="true"
                  aria-label="Question 3. Not seen."
                  class="step default current"
                  disabled=""
                  tabindex="-1"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    3
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Bookmarked Question 4. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon small"
                    viewBox="0 0 12 12"
                  >
                    <title>
                      Bookmark active icon
                    </title>
                    <path
                      d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 5. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 2
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 6. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    6
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 7. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    7
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 8. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    8
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 9. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    9
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 10. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    10
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 11. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    11
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 12. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    12
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 13. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    13
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 14. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    14
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 15. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    15
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 16. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    16
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 17. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    17
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 3
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 18. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    18
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 19. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    19
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 4
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 20. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    20
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 1
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Bookmarked Question 4. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    4
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 1
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 2. Not completed."
                  class="step visited"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    2
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-current="location"
                  aria-disabled="true"
                  aria-label="Question 3. Not seen."
                  class="step default current"
                  disabled=""
                  tabindex="-1"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    3
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Bookmarked Question 4. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    4
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 5. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 2
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 6. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    6
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 7. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    7
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 8. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    8
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 9. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    9
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 10. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    10
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 11. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    11
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 12. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    12
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 13. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    13
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 14. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    14
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 15. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    15
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 16. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    16
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 17. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    17
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 3
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 18. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    18
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 19. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    19
                  </span>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Section 4
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-disabled="true"
                  aria-label="Question 20. Not seen."
                  class="step default"
                  disabled=""
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    20
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TestOverviewContent > fails to render without a serviceCallId 1`] = `[TypeError: A "serviceCallId" is required to get the state store of the test session]`;

exports[`TestOverviewContent > gets timers state to render timed-out steps and sections 1`] = `
<div
  class="tabpanel"
  role="tabpanel"
>
  <div>
    
    <div
      class="ui-heading tabpanel-heading"
      id="tao-sectionheader-123"
    >
      <div
        class="label"
      >
        Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
      </div>
       
      <div
        class="timer-label"
      >
        OUT OF TIME
      </div>
    </div>
     
    <ol
      aria-labelledby="tao-sectionheader-123"
      class="space-large wrapped"
    >
      <li>
        <button
          aria-label="Question 1. Completed. Timed out."
          class="step completed"
          tabindex="0"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Bookmarked Question 2. Not completed. Timed out."
          class="step visited"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon small"
            viewBox="0 0 12 12"
          >
            <title>
              Bookmark active icon
            </title>
            <path
              d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Bookmarked Question 3. Completed. Timed out."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon small"
            viewBox="0 0 12 12"
          >
            <title>
              Bookmark active icon
            </title>
            <path
              d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Seen. Timed out."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Seen. Timed out."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
    </ol>
    
    <div
      class="ui-heading tabpanel-heading"
      id="tao-sectionheader-123"
    >
      <div
        class="label"
      >
        Optics
      </div>
       
      <div
        class="timer-label timer-current"
      >
        30s left
      </div>
    </div>
     
    <ol
      aria-labelledby="tao-sectionheader-123"
      class="space-large wrapped"
    >
      <li>
        <button
          aria-current="location"
          aria-label="Question 4. Not completed."
          class="step visited current"
          tabindex="-1"
        >
          <span
            aria-hidden="true"
            class="indicator"
          >
            <svg
              aria-hidden="false"
              class="icon small"
              viewBox="0 0 12 12"
            >
              <title>
                Current item indicator
              </title>
              <path
                d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                fill-rule="evenodd"
              />
            </svg>
          </span>
           
           
          <span
            aria-hidden="true"
            class="step-label"
          >
            4
          </span>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Question 5. Not seen. Timed out."
          class="step default"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Not seen."
          class="step default"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Info icon
            </title>
            <path
              d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
    </ol>
    
  </div>
   
</div>
`;

exports[`TestOverviewContent > gets timers state to render timed-out steps and sections 2`] = `
<div
  class="tabpanel"
  role="tabpanel"
>
  <div>
    
    <div
      class="ui-heading tabpanel-heading"
      id="tao-sectionheader-123"
    >
      <div
        class="label"
      >
        Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
      </div>
       
      <div
        class="timer-label"
      >
        40s
      </div>
    </div>
     
    <ol
      aria-labelledby="tao-sectionheader-123"
      class="space-large wrapped"
    >
      <li>
        <button
          aria-label="Question 1. Completed."
          class="step completed"
          tabindex="0"
        >
           
           
          <span
            aria-hidden="true"
            class="step-label"
          >
            1
          </span>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Bookmarked Question 2. Not completed."
          class="step visited"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon small"
            viewBox="0 0 12 12"
          >
            <title>
              Bookmark active icon
            </title>
            <path
              d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Bookmarked Question 3. Completed."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon small"
            viewBox="0 0 12 12"
          >
            <title>
              Bookmark active icon
            </title>
            <path
              d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Seen. Timed out."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Seen."
          class="step completed"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Info icon
            </title>
            <path
              d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
              fill-rule="evenodd"
            />
          </svg>
        </button>
         
      </li>
    </ol>
    
    <div
      class="ui-heading tabpanel-heading"
      id="tao-sectionheader-123"
    >
      <div
        class="label"
      >
        Optics
      </div>
       
      <div
        class="timer-label"
      >
        OUT OF TIME
      </div>
    </div>
     
    <ol
      aria-labelledby="tao-sectionheader-123"
      class="space-large wrapped"
    >
      <li>
        <button
          aria-current="location"
          aria-label="Question 4. Not completed. Timed out."
          class="step visited current"
          tabindex="-1"
        >
          <span
            aria-hidden="true"
            class="indicator"
          >
            <svg
              aria-hidden="false"
              class="icon small"
              viewBox="0 0 12 12"
            >
              <title>
                Current item indicator
              </title>
              <path
                d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                fill-rule="evenodd"
              />
            </svg>
          </span>
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Question 5. Not seen. Timed out."
          class="step default"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
      <li>
        <button
          aria-label="Informational Item. Not seen. Timed out."
          class="step default"
          tabindex="-1"
        >
           
           
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Timer icon
            </title>
            <path
              d="M5.50001 1.50006H10.5V2.50182H8.50001V3.50357C9.90951 3.63247 11.2152 4.30073 12.1454 5.36936C13.0756 6.438 13.5587 7.82473 13.4943 9.24111C13.4299 10.6575 12.8229 11.9945 11.7996 12.974C10.7763 13.9535 9.41537 14.5001 8.00001 14.5001C6.58464 14.5001 5.22376 13.9535 4.20043 12.974C3.1771 11.9945 2.5701 10.6575 2.5057 9.24111C2.4413 7.82473 2.92445 6.438 3.85465 5.36936C4.78486 4.30073 6.0905 3.63247 7.50001 3.50357V2.50182H5.50001V1.50006ZM5.49994 12.7614C6.23996 13.2567 7.10999 13.5211 8.00001 13.5211C9.19267 13.5185 10.3357 13.0427 11.1791 12.1979C12.0224 11.353 12.4974 10.208 12.5 9.01322C12.5 8.12165 12.2361 7.25009 11.7416 6.50877C11.2472 5.76745 10.5443 5.18966 9.72208 4.84847C8.89981 4.50728 7.99501 4.41801 7.1221 4.59194C6.24918 4.76588 5.44736 5.19522 4.81802 5.82566C4.18869 6.4561 3.7601 7.25933 3.58647 8.13378C3.41284 9.00822 3.50195 9.91461 3.84255 10.7383C4.18314 11.562 4.75992 12.2661 5.49994 12.7614ZM7.5 5.50006H8.5V9.50006H7.5V5.50006Z"
            />
          </svg>
        </button>
         
      </li>
    </ol>
    
  </div>
   
</div>
`;

exports[`TestOverviewContent > gets timers state to render timed-out steps and sections 3`] = `
<div
  class="ui-heading tabpanel-heading"
  id="tao-sectionheader-123"
>
  <div
    class="label"
  >
    Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
  </div>
   
  <div
    class="timer-label"
  >
    40s
  </div>
</div>
`;

exports[`TestOverviewContent > gets timers state to render timed-out steps and sections 4`] = `
<div
  class="ui-heading tabpanel-heading"
  id="tao-sectionheader-123"
>
  <div
    class="label"
  >
    Optics
  </div>
   
  <div
    class="timer-label timer-current"
  >
    (+ 3s) left
  </div>
</div>
`;

exports[`TestOverviewContent > renders steps with different states, grouped into sections, on 3 tabs, from current test part, and indicates current step 1`] = `
<body>
  <div>
    <div
      class="overview"
    >
      <div
        class="tabs"
      >
        <div
          class="tabgroup"
        >
           
          <div
            class="scrollbox"
          >
            <ul
              role="tablist"
            >
              <li
                role="presentation"
              >
                <button
                  aria-current="true"
                  aria-selected="true"
                  role="tab"
                >
                   
                  all questions
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  bookmarked (2)
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  incomplete (1)
                   
                </button>
                 
              </li>
            </ul>
            <iframe
              aria-hidden="true"
              src="about:blank"
              style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
              tabindex="-1"
            />
          </div>
           
        </div>
      </div>
       
      <div>
        <div
          class="tabpanel"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 1. Completed."
                  class="step completed"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    1
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Bookmarked Question 2. Not completed."
                  class="step visited"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon small"
                    viewBox="0 0 12 12"
                  >
                    <title>
                      Bookmark active icon
                    </title>
                    <path
                      d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Bookmarked Question 3. Completed."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon small"
                    viewBox="0 0 12 12"
                  >
                    <title>
                      Bookmark active icon
                    </title>
                    <path
                      d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Seen."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Seen."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Optics
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-current="location"
                  aria-label="Question 4. Not completed."
                  class="step visited current"
                  tabindex="-1"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    4
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Question 5. Not seen."
                  class="step default"
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Not seen."
                  class="step default"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Bookmarked Question 2. Not completed."
                  class="step visited"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    2
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Bookmarked Question 3. Completed."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    3
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Optics
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 5. Not seen."
                  class="step default"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TestOverviewContent > renders with bookmarks disabled 1`] = `
<body>
  <div>
    <div
      class="overview"
    >
      <div
        class="tabs"
      >
        <div
          class="tabgroup"
        >
           
          <div
            class="scrollbox"
          >
            <ul
              role="tablist"
            >
              <li
                role="presentation"
              >
                <button
                  aria-current="true"
                  aria-selected="true"
                  role="tab"
                >
                   
                  all questions
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  incomplete (1)
                   
                </button>
                 
              </li>
            </ul>
            <iframe
              aria-hidden="true"
              src="about:blank"
              style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
              tabindex="-1"
            />
          </div>
           
        </div>
      </div>
       
      <div>
        <div
          class="tabpanel"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Physics of elemetary particles: bosons, mesons, quarks and whatever is supposed to exist in this world
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 1. Completed."
                  class="step completed"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    1
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Bookmarked Question 2. Not completed."
                  class="step visited"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon small"
                    viewBox="0 0 12 12"
                  >
                    <title>
                      Bookmark active icon
                    </title>
                    <path
                      d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Bookmarked Question 3. Completed."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon small"
                    viewBox="0 0 12 12"
                  >
                    <title>
                      Bookmark active icon
                    </title>
                    <path
                      d="M9 0H3a1 1 0 00-1 1v10a1 1 0 00.67.94A1 1 0 003 12a1 1 0 00.78-.38L6 8l2.22 3.62A1 1 0 009 12a1 1 0 00.33-.06A1 1 0 0010 11V1a1 1 0 00-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Seen."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Seen."
                  class="step completed"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
            </ol>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Optics
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-current="location"
                  aria-label="Question 4. Not completed."
                  class="step visited current"
                  tabindex="-1"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    4
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Question 5. Not seen."
                  class="step default"
                  tabindex="-1"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
              <li>
                <button
                  aria-label="Informational Item. Not seen."
                  class="step default"
                  tabindex="-1"
                >
                   
                   
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Info icon
                    </title>
                    <path
                      d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
            <div
              class="ui-heading tabpanel-heading"
              id="tao-sectionheader-123"
            >
              <div
                class="label"
              >
                Optics
              </div>
               
            </div>
             
            <ol
              aria-labelledby="tao-sectionheader-123"
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-label="Question 5. Not seen."
                  class="step default"
                  tabindex="0"
                >
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    5
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TestOverviewContent > renders with empty store 1`] = `
<body>
  <div>
    <div
      class="overview"
    />
  </div>
</body>
`;

exports[`TestOverviewContent > renders without section header if only one section 1`] = `
<body>
  <div>
    <div
      class="overview"
    >
      <div
        class="tabs"
      >
        <div
          class="tabgroup"
        >
           
          <div
            class="scrollbox"
          >
            <ul
              role="tablist"
            >
              <li
                role="presentation"
              >
                <button
                  aria-current="true"
                  aria-selected="true"
                  role="tab"
                >
                   
                  all questions
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  bookmarked (0)
                   
                </button>
                 
              </li>
              <li
                role="presentation"
              >
                <button
                  aria-current="false"
                  aria-selected="false"
                  role="tab"
                >
                   
                  incomplete (1)
                   
                </button>
                 
              </li>
            </ul>
            <iframe
              aria-hidden="true"
              src="about:blank"
              style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
              tabindex="-1"
            />
          </div>
           
        </div>
      </div>
       
      <div>
        <div
          class="tabpanel"
          role="tabpanel"
        >
          <div>
            
             
            <ol
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-current="location"
                  aria-label="Question 1. Not completed."
                  class="step visited current"
                  tabindex="0"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    1
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
          </div>
           
        </div>
        <div
          class="tabpanel hidden"
          role="tabpanel"
        >
          <div>
            
             
            <ol
              class="space-large wrapped"
            >
              <li>
                <button
                  aria-current="location"
                  aria-label="Question 1. Not completed."
                  class="step visited current"
                  tabindex="0"
                >
                  <span
                    aria-hidden="true"
                    class="indicator"
                  >
                    <svg
                      aria-hidden="false"
                      class="icon small"
                      viewBox="0 0 12 12"
                    >
                      <title>
                        Current item indicator
                      </title>
                      <path
                        d="M1 8.75a.48.48 0 00.46.25h9.09a.47.47 0 00.45-.25.4.4 0 00-.07-.45L6.35 3.15a.48.48 0 00-.7 0L1.11 8.3a.4.4 0 00-.11.45"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                   
                  <span
                    aria-hidden="true"
                    class="step-label"
                  >
                    1
                  </span>
                </button>
                 
              </li>
            </ol>
            
          </div>
           
        </div>
      </div>
    </div>
  </div>
</body>
`;
